testdata/bad/blob_7.ion
{{ YSBiIGMgZCBlIGYgZyBoIGkgaiBrI_GwgbSBuIG8gcCBxIHIgcyB0IHUgdiB3IHggeSB6 }}
